changed name of javascript file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Page Title</title>
   </head>
   <body>
-    <script src="rps.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
